--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
