--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "license": "MIT",
+  "homepage": "https://github.com/eluv-io/elv-video-editor",
   "scripts": {
     "serve": "webpack-dev-server --hot --port 8083",
     "build": "NODE_ENV=production webpack -p --progress --colors --devtool none",
