--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "url-join": "^4.0.0"
+    "url-join": "^4.0.0",
+    "vtt.js": "^0.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
