--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
     "babel-preset-mobx": "^2.0.0",
+    "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
-    "elv-client-js": "git+https://github.com/eluv-io/elv-client-js.git#70a67712921c0ab2598da7b3dc64b7ce0939149c",
+    "elv-client-js": "git+https://github.com/eluv-io/elv-client-js.git#develop",
     "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#0526c2631ed646b5a48178fbf94cb304801feede",
     "fraction.js": "^4.0.12",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "node-interval-tree": "^1.3.3",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
