--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
   "homepage": "https://github.com/eluv-io/elv-video-editor",
   "scripts": {
     "serve": "webpack-dev-server --hot --port 8083",
-    "build": "NODE_ENV=production webpack -p --progress --colors --devtool none",
+    "build": "rm -rf dist/* && NODE_ENV=production node ./node_modules/webpack-cli/bin/cli.js -p --progress --colors --devtool none",
+    "add-build": "git add dist",
     "lint": "npm run fix-scss ; npm run lint-scss ; npm run fix-js",
     "lint-show": "npm run lint-scss ; npm run lint-js",
     "lint-js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint-scss": "./node_modules/sass-lint/bin/sass-lint.js -c .scss-lint.yml -v -q",
     "fix-js": "npm run lint-js -- --fix",
     "fix-scss": "./node_modules/sass-lint-auto-fix/dist/index.js"
+  },
+  "pre-commit": {
+    "run": [
+      "lint",
+      "build",
+      "add-build"
+    ]
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
@@ -23,9 +31,12 @@
     "elv-client-js": "git+https://github.com/eluv-io/elv-client-js.git#develop",
     "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#0526c2631ed646b5a48178fbf94cb304801feede",
     "fraction.js": "^4.0.12",
+    "hls.js": "^0.12.4",
+    "m3u8-parser": "^4.4.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "node-interval-tree": "^1.3.3",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
