--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rc-slider": "^8.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-resizable": "^1.8.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "resize-observer-polyfill": "^1.5.1",
