--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-mobx": "^2.0.0",
     "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
+    "deep-object-diff": "^1.1.0",
     "elv-client-js": "git+https://github.com/eluv-io/elv-client-js.git#develop",
     "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#develop",
     "fraction.js": "^4.0.12",
