--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "worker-loader": "^2.0.0"
   },
   "babel": {
     "comments": true,
