Switch to npm elv-client-js

--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
+    "@eluvio/elv-client-js": "~2.0.0",
     "babel-preset-mobx": "^2.0.0",
     "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
     "deep-object-diff": "^1.1.0",
-    "elv-client-js": "git+https://github.com/eluv-io/elv-client-js.git#develop",
-    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#develop",
+    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#645165da87ec42845a908a9ce0817db202523866",
     "fraction.js": "^4.0.12",
     "hls.js": "^0.12.4",
     "m3u8-parser": "^4.4.0",
@@ -76,7 +76,7 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "regenerator-runtime": "^0.12.1",
