--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "@eluvio/elv-client-js": "~2.0.0",
+    "@eluvio/elv-client-js": "^2.0.12",
     "babel-preset-mobx": "^2.0.0",
     "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
@@ -77,7 +77,7 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "regenerator-runtime": "^0.12.1",
@@ -90,8 +90,8 @@
     "svg-inline-react": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "worker-loader": "^2.0.0"
   },
   "babel": {
