Change metadata tags to support multiple files

--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
     "deep-object-diff": "^1.1.0",
-    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#2c76a0a3c06288d81a31a3f2b163b4e010ba308f",
+    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#451c5c4535720bf361f480fde687335b413765a8",
     "fraction.js": "^4.0.12",
     "hls.js": "^0.12.4",
+    "lodash": "^4.17.19",
     "m3u8-parser": "^4.4.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
