--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "@eluvio/elv-client-js": "^3.0.0",
+    "@eluvio/elv-client-js": "^3.1.22",
     "babel-preset-mobx": "^2.0.0",
     "dash-js": "^1.3.5",
     "dashjs": "^2.9.3",
     "deep-object-diff": "^1.1.0",
-    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git#451c5c4535720bf361f480fde687335b413765a8",
+    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git",
     "fraction.js": "^4.0.12",
     "hls.js": "^0.12.4",
     "m3u8-parser": "^4.4.0",
