--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "resize-observer-polyfill": "^1.5.1",
+    "tiff.js": "^1.0.0",
     "urijs": "^1.19.1",
     "url-join": "^4.0.0",
     "vtt.js": "^0.13.0"
