--- a/package.json
+++ b/package.json
@@ -76,18 +76,18 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
-    "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^0.5.1",
     "regenerator-runtime": "^0.12.1",
+    "sass": "^1.51.0",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.21.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.2.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
     "svg-inline-loader": "^0.8.0",
     "svg-inline-react": "^3.1.0",
-    "webpack": "^4.29.6",
+    "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
