--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "bump-version": "npm --git-tag-version --no-commit-hooks version patch",
     "serve": "webpack-dev-server --host 0.0.0.0 --hot --port 8083",
-    "build": "rm -rf dist/* && NODE_ENV=production node ./node_modules/webpack-cli/bin/cli.js -p --devtool eval-source-map",
+    "build": "rm -rf dist/* && NODE_ENV=production node ./node_modules/webpack-cli/bin/cli.js -p --devtool none",
     "add-build": "git add dist",
     "lint": "npm run fix-scss ; npm run lint-scss ; npm run fix-js",
     "lint-show": "npm run lint-scss ; npm run lint-js",
@@ -38,21 +38,23 @@
     "react-resizable": "^1.8.0",
     "resize-observer-polyfill": "^1.5.1",
     "tiff.js": "^1.0.0",
-    "urijs": "^1.19.7",
     "url-join": "^4.0.0",
     "vtt.js": "^0.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-regenerator": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.4.3",
     "autoprefixer": "^9.5.0",
     "babel-cli": "^6.26.0",
@@ -74,7 +76,7 @@
     "sass": "^1.51.0",
     "sass-lint": "^1.12.1",
     "sass-lint-auto-fix": "^0.21.0",
-    "sass-loader": "^10.2.1",
+    "sass-loader": "^10.4.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.22.1",
     "svg-inline-loader": "^0.8.0",
