--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dashjs": "^2.9.3",
     "deep-object-diff": "^1.1.0",
     "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git",
-    "fraction.js": "^4.0.12",
+    "fraction.js": "4.0.12",
     "hls.js": "^1.3.5",
     "m3u8-parser": "^4.7.0",
     "mobx": "^5.9.4",
