--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fraction.js": "^4.0.12",
     "hls.js": "^1.3.5",
     "m3u8-parser": "^4.7.0",
+    "mime-types": "^2.1.35",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "node-interval-tree": "^1.3.3",
