--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
   "homepage": "https://github.com/eluv-io/elv-video-editor",
   "scripts": {
     "bump-version": "npm --git-tag-version --no-commit-hooks version patch",
-    "serve": "webpack-dev-server --host 0.0.0.0 --hot --port 8083",
-    "build": "rm -rf dist/* && NODE_ENV=production node ./node_modules/webpack-cli/bin/cli.js -p --devtool none",
-    "add-build": "git add dist",
-    "lint": "npm run fix-scss ; npm run lint-scss ; npm run fix-js",
-    "lint-show": "npm run lint-scss ; npm run lint-js",
-    "lint-js": "./node_modules/.bin/eslint \"src/**/*.js\"",
-    "lint-scss": "./node_modules/sass-lint/bin/sass-lint.js -c .scss-lint.yml -v -q",
-    "fix-js": "npm run lint-js -- --fix",
-    "fix-scss": "./node_modules/sass-lint-auto-fix/dist/index.js"
+    "serve": "webpack-dev-server --hot --port 8090 --host=0.0.0.0 --port 8083",
+    "build": "node ./node_modules/webpack-cli/bin/cli.js --mode=production --devtool false",
+    "lint": "npm-run-all -s -c lint-js-fix lint-scss-fix",
+    "lint-js": "eslint ./src ./client/src --ext js,jsx --report-unused-disable-directives",
+    "lint-js-fix": "eslint ./src ./client/src --fix --ext js,jsx --report-unused-disable-directives",
+    "lint-scss": "npx stylelint \"src/**/*.{css,scss}\"",
+    "lint-scss-fix": "npx stylelint \"src/**/*.{css,scss}\" --fix"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
@@ -43,65 +41,51 @@
     "vtt.js": "^0.13.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-regenerator": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.4.3",
-    "autoprefixer": "^9.5.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^2.0.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
-    "postcss-loader": "^3.0.0",
-    "raw-loader": "^0.5.1",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/runtime": "^7.22.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "fast-sass-loader": "^2.0.1",
+    "html-webpack-plugin": "^5.5.3",
+    "js-yaml": "^4.1.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "react-refresh": "^0.14.0",
     "regenerator-runtime": "^0.12.1",
     "sass": "^1.51.0",
-    "sass-lint": "^1.12.1",
-    "sass-lint-auto-fix": "^0.21.0",
-    "sass-loader": "^10.4.1",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.22.1",
-    "svg-inline-loader": "^0.8.0",
-    "svg-inline-react": "^3.1.0",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "worker-loader": "^2.0.0"
-  },
-  "babel": {
-    "comments": true,
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "syntax-async-functions",
-      "@babel/plugin-syntax-dynamic-import",
-      "@babel/plugin-syntax-jsx",
-      "@babel/plugin-syntax-object-rest-spread",
-      "@babel/plugin-proposal-object-rest-spread",
-      "@babel/plugin-transform-react-jsx",
-      "@babel/plugin-transform-regenerator"
-    ]
+    "sass-lint": "^1.13.1",
+    "sass-loader": "^10.2.1",
+    "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.10.2",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-order": "^6.0.3",
+    "svg-inline-loader": "^0.8.2",
+    "terser-webpack-plugin": "^5.3.9",
+    "url": "^0.11.2",
+    "uuid": "^8.3.2",
+    "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "yaml-loader": "^0.8.0"
   }
 }
