--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elv-video-editor",
   "version": "3.1.8",
   "description": "",
-  "main": "index.js",
+  "main": "index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/eluv-io/elv-video-editor",
   "scripts": {
@@ -17,24 +17,26 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "@eluvio/elv-client-js": "^4.0.5",
+    "@eluvio/elv-client-js": "^4.0.96",
+    "@eluvio/elv-player-js": "^2.0.19",
+    "@mantine/core": "^7.13.0",
+    "@mantine/dates": "^7.13.0",
+    "@mantine/hooks": "^7.13.0",
+    "@tabler/icons-react": "^3.17.0",
     "babel-preset-mobx": "^2.0.0",
-    "dash-js": "^1.3.5",
-    "dashjs": "^2.9.3",
     "deep-object-diff": "^1.1.0",
-    "elv-components-js": "git+https://github.com/eluv-io/elv-components-js.git",
     "fraction.js": "^4.0.12",
-    "hls.js": "^1.3.5",
     "m3u8-parser": "^4.7.0",
     "mime-types": "^2.1.35",
-    "mobx": "^5.9.4",
-    "mobx-react": "^5.4.3",
+    "mobx": "^6.13.2",
+    "mobx-react": "^9.1.1",
     "node-interval-tree": "^1.3.3",
     "prop-types": "^15.7.2",
     "rc-slider": "^8.6.9",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-resizable": "^1.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-inlinesvg": "^4.1.3",
+    "react-resizable": "^3.0.5",
     "resize-observer-polyfill": "^1.5.1",
     "tiff.js": "^1.0.0",
     "url-join": "^4.0.0",
@@ -46,8 +48,8 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.25.4",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@babel/runtime": "^7.22.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "autoprefixer": "^9.8.6",
