--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "elv-video-editor",
-  "version": "3.1.8",
+  "version": "4.0.0",
+  "type": "module",
   "description": "",
-  "main": "index.jsx",
   "license": "MIT",
   "homepage": "https://github.com/eluv-io/elv-video-editor",
   "scripts": {
+    "serve-vite": "rm -rf node_modules/.vite; vite",
+    "build-vite": "rm -rf dist/* ; vite build",
     "bump-version": "npm --git-tag-version --no-commit-hooks version patch",
-    "serve": "webpack-dev-server --hot --port 8090 --host=0.0.0.0 --port 8083",
+    "serve": "webpack-dev-server --hot --host=0.0.0.0 --port 8083",
     "build": "node ./node_modules/webpack-cli/bin/cli.js --mode=production --devtool false",
     "lint": "npm-run-all -s -c lint-js-fix lint-scss-fix",
     "lint-js": "eslint ./src --ext js,jsx --report-unused-disable-directives",
@@ -31,8 +33,6 @@
     "mobx": "^6.13.2",
     "mobx-react": "^9.1.1",
     "node-interval-tree": "^1.3.3",
-    "prop-types": "^15.7.2",
-    "rc-slider": "^8.6.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-inlinesvg": "^4.1.3",
@@ -51,6 +51,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/runtime": "^7.22.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.3",
@@ -83,6 +84,9 @@
     "terser-webpack-plugin": "^5.3.9",
     "url": "^0.11.2",
     "uuid": "^8.3.2",
+    "vite": "^5.4.11",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-static-copy": "^2.2.0",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
