--- a/package.json
+++ b/package.json
@@ -37,59 +37,32 @@
     "resize-observer-polyfill": "^1.5.1",
     "tiff.js": "^1.0.0",
     "url-join": "^4.0.0",
-    "vtt.js": "^0.13.0",
     "wouter": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.10",
-    "@babel/core": "^7.22.10",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.24.7",
-    "@babel/plugin-transform-class-properties": "^7.25.4",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/runtime": "^7.22.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.3",
     "crypto-browserify": "^3.12.0",
-    "css-loader": "^7.1.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "fast-sass-loader": "^2.0.1",
     "html-webpack-plugin": "^5.5.3",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.38",
-    "postcss-loader": "^7.3.3",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
     "react-refresh": "^0.14.0",
-    "regenerator-runtime": "^0.12.1",
     "sass": "^1.51.0",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^10.2.1",
-    "stream-browserify": "^3.0.0",
-    "style-loader": "^3.3.3",
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-order": "^6.0.3",
-    "svg-inline-loader": "^0.8.2",
-    "terser-webpack-plugin": "^5.3.9",
     "url": "^0.11.2",
     "uuid": "^8.3.2",
     "vite": "^5.4.11",
     "vite-plugin-node-polyfills": "^0.22.0",
-    "vite-plugin-static-copy": "^2.2.0",
-    "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "yaml-loader": "^0.8.0"
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
