--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "html-webpack-plugin": "^5.5.3",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.5.3",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "react-refresh": "^0.14.0",
     "sass": "^1.51.0",
     "sass-lint": "^1.13.1",
