--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
     "@eluvio/elv-client-js": "^4.0.116",
-    "@mantine/core": "^7.16.2",
-    "@mantine/hooks": "^7.16.2",
-    "@mantine/modals": "^7.16.2",
+    "@mantine/core": "^7.17.0",
+    "@mantine/dropzone": "^7.17.0",
+    "@mantine/form": "^7.17.1",
+    "@mantine/hooks": "^7.17.0",
+    "@mantine/modals": "^7.17.0",
     "@tabler/icons-react": "^3.17.0",
     "babel-preset-mobx": "^2.0.0",
     "deep-object-diff": "^1.1.0",
     "fraction.js": "^4.0.12",
     "hls.js": "^1.5.15",
     "m3u8-parser": "^4.7.0",
+    "mantine-datatable": "^7.15.1",
     "mime-types": "^2.1.35",
     "mobx": "^6.13.2",
     "mobx-react": "^9.1.1",
     "node-interval-tree": "^1.3.3",
+    "pretty-bytes": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-inlinesvg": "^4.1.3",
@@ -40,6 +44,7 @@
     "wouter": "^3.5.0"
   },
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^9.8.6",
