--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
     "@eluvio/elv-client-js": "^4.0.116",
-    "@mantine/core": "^7.17.0",
-    "@mantine/dropzone": "^7.17.0",
-    "@mantine/form": "^7.17.1",
-    "@mantine/hooks": "^7.17.0",
-    "@mantine/modals": "^7.17.0",
+    "@mantine/core": "^7.17.2",
+    "@mantine/dates": "^7.17.2",
+    "@mantine/dropzone": "^7.17.2",
+    "@mantine/form": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
+    "@mantine/modals": "^7.17.2",
     "@tabler/icons-react": "^3.17.0",
     "babel-preset-mobx": "^2.0.0",
+    "dayjs": "^1.11.13",
     "deep-object-diff": "^1.1.0",
     "fraction.js": "^4.0.12",
     "hls.js": "^1.5.15",
